[package]
name = "paxcii"
version = "0.5.0"
edition = "2021"
authors = ["enedon <3nedon@gmail.com>"]
license = "MIT"
repository = "https://github.com/enedon/paxcii"
documentation = "https://docs.rs/paxcii/latest/paxcii/"
description = "Transform images and videos to ascii"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
term_size = "0.3"
clap = "4"
rodio = { version = "0.16", default-features = false, features = ["symphonia-all"], optional = true }
nokhwa = { version = "0.10", features = ["input-native", "output-wgpu"], optional = true }
anyhow = "1.0"

[features]
default = ["webcam", "audio"]
webcam = ["dep:nokhwa"]
audio = ["dep:rodio"]

[[bin]]
name = "paxcii"
required-features = ["webcam", "audio"]