[package]
name = "paxcii"
version = "0.6.0"
edition = "2021"
authors = ["dwion <3nedon@gmail.com>"]
license = "MIT"
repository = "https://github.com/dwion/paxcii"
documentation = "https://docs.rs/paxcii/latest/paxcii/"
description = "Transform images and videos to ascii"
keywords = ["ascii", "image", "video", "cli"]

[dependencies]
image = "0.24"
term_size = "0.3"
clap = "4.4"
rodio = { version = "0.17", default-features = false, features = ["mp3"], optional = true }
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", branch = "0.10", features = ["input-native", "output-wgpu"], optional = true }
# nokhwa = { version = "0.10" , features = ["input-native", "output-wgpu"], optional = true }
anyhow = "1.0"

[features]
webcam = ["dep:nokhwa"]
audio = ["dep:rodio"]
# remove before release
default = ["audio", "webcam"]

[[bin]]
name = "paxcii"
required-features = ["audio", "webcam"]
